--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,11 +56,13 @@ dependencies {
     //Gson
     implementation 'com.google.code.gson:gson:2.8.4'
     //listview和recycleview的adpater的封装类
-    compile 'com.zhy:base-rvadapter:3.0.3'
-    compile 'com.zhy:base-adapter:3.0.3'
-    compile 'com.lzy.widget:ninegridview:0.2.0'
+    implementation 'com.zhy:base-rvadapter:3.0.3'
+    implementation 'com.zhy:base-adapter:3.0.3'
+    implementation 'com.lzy.widget:ninegridview:0.2.0'
     //图片加载框架
-    compile 'com.github.bumptech.glide:glide:4.5.0'
+    implementation 'com.github.bumptech.glide:glide:4.5.0'
     //webView
-    compile 'com.just.agentweb:agentweb:4.0.2'
+    implementation 'com.just.agentweb:agentweb:4.0.2'
+    //浮动菜单
+    implementation 'com.nineoldandroids:library:2.4.0'
 }
