--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
     //加载布局
     implementation 'com.lai.weavey:loadinglayout:1.3.1'
+    //引导页
+    compile 'cn.bingoogolapple:bga-banner:2.1.7@aar'
     //流布局
     implementation 'com.hyman:flowlayout-lib:1.1.2'
     //刷新框架
